Wrote some more

--- a/discussion.Rmd
+++ b/discussion.Rmd
@@ -54,9 +54,19 @@ However, I believe this is not an issue, since the model is not meant to be pres
 
 During this project, I had time to think through and test out different implementations of the various features of the interactive data visualization system. While I succeeded in some areas, there were also areas which could still use some improvement. 
 
-As discussed in Section \@ref(system), one shortcoming of my system is the absence of a simple declarative schema for specifying interactive graphics. While some parts of the internal codebase such as [REFERENCE WRANGLER] showed some promise, ultimately, plot were defined in a largely procedural way, and the package's user-facing API (`plotscaper`) used nominal plot-type functions. As I argued earlier, I believe this challenge is not unique to my system; many other, overtly declarative data visualization systems offer only partial solutions [see also @wu2024]. There are important reasons for why coming up with declarative schemas for interactive graphics is not easy, such as the lack of a direct correspondence between data variables and encodings (see Section [REFERENCE]) or the hierarchical nature of graphics itself (discussed e.g. in Section \@ref(hierarchy)), 
+### Declarative schemas
 
-Further, 
+As discussed in Section \@ref(system), one limitation of the delivered system is the absence of a simple declarative schema-based approach for specifying plots. While declarative schemas, popularized by the Grammar of Graphics [@wilkinson2012], have become a highly popular in modern data visualization libraries, my system deviates from this paradigm. Although certain core components within `plotscape` are modeled declaratively (as shown in Section \@ref(summaries)), the overall plot definitions remain largely procedural, and the user-facing API (`plotscaper`) relies on nominal plot types^[Currently there are six different types of plots implemented.]. 
+
+However, as I argued in Section \@ref(variables-encodings), this lack of a full declarative plot specification is not unique to my system. Instead, many currently available declarative data visualization libraries provide incomplete solutions, frequently concealing or obscuring key implementation details [see also @wu2024]. During the project, I did try to come up with a simple and convenient way of specifying declarative schemas for interactive graphics, however, ultimately I failed, and chose to simply make this implementation gap explicit. 
+
+Specifying a complete declarative schema interactive data visualizations is inherently challenging, for several reasons. First, there is the lack of direct correspondence between data variables and visual encodings. Specifically, as discussed in Section \@ref(variables-encodings), often, what we plot *not* variables found in the original data, but instead variables which have been computed or derived in some way. This is exists even in static graphics; however, it is further amplified in interactive graphics, where dynamic remapping of variables to aesthetics is often desirable (such as when transforming a barplot to a spineplot). Thus, directly mapping data variables to aesthetics seems to be an inadequate approach. However, to map derived variables to aesthetics, we have to explicitly specify *what* we compute and *how*. For example, to fully specify a histogram, we have to describe the fact that we want to bin cases based on some continuous variable, compute the counts within bins, stack these counts, also within bins, and finally map the bin borders to the x-axis variable and the counts to the y-axis variable. While I have been able to get reasonably far with providing a mechanism for specifying declarative schema for this process (see Section \@ref(variables-encodings)), ultimately, I was not able to integrate it with the rest of the system without some amount of procedural code.
+
+Second, a further challenge to declarative schemas in interactive data visualization stems from the hierarchical nature of graphics (see Section \@ref(hierarchy)). Specifically, while in static graphics, we can often act as if the data underlying our plots is "flat", interactivity necessitates hierarchical data structures. Interactive features like linked selection and parametric manipulation trigger updates to summary statistics, requiring hierarchical organization for efficient updates, especially with features like stacking and normalization (see Sections \@ref(transforming-summaries) and \@ref(aggregation-summaries)). Furthermore, hierarchical data can also be leveraged to provide more efficient scale and axis updates (see Section \@ref(plot-scales)), and display more information during querying (e.g., by displaying summary statistics for both objects and segments). However, specifying declarative schemas with hierarchical data is inherently more complex than with flat data, due to both increased volume (multiple data sets) and hierarchical dependencies.
+
+Third and related issue is the presence of reactivity. Interactive graphics need to, by definition, respond to user input. However, this input can affect different stages of the data visualization pipeline. For instance, while shrinking or growing the size of points in a scatterplot is a purely graphical computation, shrinking or growing the width of histogram bins requires recomputation of the underlying data.  
+
+
 
 ### Performance
 
@@ -64,6 +74,6 @@ A key aspect to discuss is the performance of the delivered software. As discuss
 
 Despite not being the sole focus, I am happy to report that `plotscaper` achieves solid performance even on moderately sized data sets. Specifically, I was able to achieve highly responsive point-wise linked selection on data sets with tens of thousands of data points (such as the `diamonds` data set; see the [Performance vignette](https://bartonicek.github.io/plotscaper/articles/performance.html) on `plotscaper`'s package website). This performance is, of course, largely attributable to the highly optimized nature of JavaScript engines such as V8 rather than any targeted optimization. Nevertheless, I did try to be generally mindful of performance while developing the package, by adhering to data oriented practices such as relying on the Structure of Arrays (SoA) data layout.  
 
-Profiling of the package revealed that the primary performance bottleneck was rendering. This manifests quite clearly even on the macro level: figures composed entirely of aggregate plots tend remain responsive even with fairly large data sets, whereas figures with multiple bijective plots (such as scatterplots or parallel coordinate plots) can start to become sluggish even with moderately-sized data sets (thousands or tens-of-thousands of data points). Therefore, alternative rendering strategies may offer significant performance gains. Currently, `plotscaper` relies on HTML5 `canvas`, a simple bitmap-based rendering element. In the future, GPU-based rendering, particularly WebGL [@webgl2025], could be used to potentially greatly improve performance.
+Profiling of the package revealed that the primary performance bottleneck was rendering. This manifests quite clearly even on the macro level: figures composed entirely of aggregate plots tend remain responsive even with fairly large data sets, whereas figures with multiple bijective plots (such as scatterplots or parallel coordinate plots) can start to become sluggish even with moderately-sized data sets (thousands or tens-of-thousands of data points). Therefore, alternative rendering strategies may offer significant performance gains. Currently, `plotscaper` relies on the default HTML5 `canvas` rendering context, which provides a simple interface for rendering 2D graphics. GPU-based rendering, particularly WebGL [@webgl2025], could lead to significant performance improvements.
 
-Beyond rendering, there are other parts of the system that may provide opportunities for easy performance wins. For instance, currently, querying and selection both rely on a naive implementation of collision detection, whereby (potentially) all objects are looped through until matches are found. An approach based on spatial data structures, for example quadtrees [@samet1988], could significantly accelerate these searches. Furthermore, while reactivity is implemented using the - fairly performant - simple observer pattern, and event callbacks throttled on hot paths (such as mousemove events), further optimizations of the reactive system may also be possible. Finally, though less performance critical, client-server communication could also be made more performant. Currently, it is implemented with WebSockets [@cheng2024; @mdn2024g] and JSON-based payloads, which incurs serialization/deserialization overhead on each message. An alternative protocol like TCP could mitigate this.
+Beyond rendering, there are other parts of the system that may provide opportunities for easy performance wins. For instance, currently, as mentioned in Section \@ref(plot-mousemove), querying and selection both rely on a naive collision-detection loop, such that all objects are looped through until matches are found. An approach using spatial data structures, for example quadtrees [@samet1988], could significantly accelerate these searches. Another area which may be open to performance improvements is reactivity. While reactivity is implemented using the - fairly performant - observer pattern, and event callbacks throttled on hot paths (such as mousemove events), further optimization of the reactive system may be possible. Finally, though less performance critical, client-server communication could also be made more performant. Currently, it is implemented with WebSockets [@cheng2024; @mdn2024g] and JSON-based payloads, which incurs serialization/deserialization overhead on each message. An alternative protocol like TCP could mitigate this.
