--- a/_main.Rmd
+++ b/_main.Rmd
@@ -222,7 +222,7 @@ Placeholder
 #### Observer pattern {#observer}
 #### Streams
 #### Virtual DOM
-#### Signals
+#### Signals {#signals}
 #### Reactivity in `plotscape` and final thoughts {#reactivity-solution}
 ### System components
 #### Indexable {#Indexable}
@@ -342,15 +342,22 @@ However, I believe this is not an issue, since the model is not meant to be pres
 
 During this project, I had time to think through and test out different implementations of the various features of the interactive data visualization system. While I succeeded in some areas, there were also areas which could still use some improvement. 
 
-### Declarative schema
+### Declarative schemas
 
-As discussed in Section \@ref(system), one limitation of the delivered system is the absence of a simple declarative schema-based approach for specifying plots. While declarative schemas, popularized by the Grammar of Graphics [@wilkinson2012], have become a highly popular in modern data visualization libraries, my system deviates from this paradigm. Although certain core components within `plotscape` are modeled declaratively (as shown in Section \@ref(summaries)), the overall plot definitions remain largely procedural, and the user-facing API (`plotscaper`) relies on nominal plot types. 
+As discussed in Section \@ref(system), one limitation of the delivered system is the absence of a simple declarative schema-based approach for specifying plots. While declarative schemas, popularized by the Grammar of Graphics [@wilkinson2012], have become a highly popular in modern data visualization libraries, my system deviates from this paradigm. Although certain core components within `plotscape` are modeled declaratively (as shown in Section \@ref(summaries)), the overall plot definitions remain largely procedural, and the user-facing API (`plotscaper`) relies on nominal plot types^[Currently there are six different types of plots implemented.]. 
 
 However, as I argued in Section \@ref(variables-encodings), this lack of a full declarative plot specification is not unique to my system. Instead, many currently available declarative data visualization libraries provide incomplete solutions, frequently concealing or obscuring key implementation details [see also @wu2024]. During the project, I did try to come up with a simple and convenient way of specifying declarative schemas for interactive graphics, however, ultimately I failed, and chose to simply make this implementation gap explicit. 
 
 Specifying a complete declarative schema interactive data visualizations is inherently challenging, for several reasons. First, there is the lack of direct correspondence between data variables and visual encodings. Specifically, as discussed in Section \@ref(variables-encodings), often, what we plot *not* variables found in the original data, but instead variables which have been computed or derived in some way. This is exists even in static graphics; however, it is further amplified in interactive graphics, where dynamic remapping of variables to aesthetics is often desirable (such as when transforming a barplot to a spineplot). Thus, directly mapping data variables to aesthetics seems to be an inadequate approach. However, to map derived variables to aesthetics, we have to explicitly specify *what* we compute and *how*. For example, to fully specify a histogram, we have to describe the fact that we want to bin cases based on some continuous variable, compute the counts within bins, stack these counts, also within bins, and finally map the bin borders to the x-axis variable and the counts to the y-axis variable. While I have been able to get reasonably far with providing a mechanism for specifying declarative schema for this process (see Section \@ref(variables-encodings)), ultimately, I was not able to integrate it with the rest of the system without some amount of procedural code.
 
 Second, a further challenge to declarative schemas in interactive data visualization stems from the hierarchical nature of graphics (see Section \@ref(hierarchy)). Specifically, while in static graphics, we can often act as if the data underlying our plots is "flat", interactivity necessitates hierarchical data structures. Interactive features like linked selection and parametric manipulation trigger updates to summary statistics, requiring hierarchical organization for efficient updates, especially with features like stacking and normalization (see Sections \@ref(transforming-summaries) and \@ref(aggregation-summaries)). Furthermore, hierarchical data can also be leveraged to provide more efficient scale and axis updates (see Section \@ref(plot-scales)), and display more information during querying (e.g., by displaying summary statistics for both objects and segments). However, specifying declarative schemas with hierarchical data is inherently more complex than with flat data, due to both increased volume (multiple data sets) and hierarchical dependencies.
+
+Third and related issue which complicates declarative schemas is reactivity. Interactive visualizations need to, by definition, respond to user input. However, this input can impact various stages of the data visualization pipeline differently. For instance, while shrinking or growing the size of points in a scatterplot is a purely graphical computation, shrinking or growing the width of histogram bins requires recomputation of the underlying data. Consequently, the declarative schema should be able to handle reactive parameters which may have hierarchical dependencies. Signals (see Section \@ref(signals)) may offer a hypothetical general solution; however, as discussed in Section \@ref(reactivity-solution), my experience with developing `plotscape` revealed that reactivity typically tends to enter the visualization process at discrete points, corresponding to the four stages of the data visualization pipeline. While I did not manage to develop a general declarative mechanism for setting these parameters at these four stages, the following list outlines the identified points of reactivity:
+
+- Pre-partitioning: Data streaming, partitioning parameter updates (e.g. histogram bin width, selection status)
+- Pre-aggregation: Aggregation parameter updates (e.g. regression line regularization)
+- Pre-scaling: Scale parameter updates (e.g. sorting, size/alpha adjustments)
+- Pre-rendering: Surface-level changes (e.g. layout modifications, DOM resize events)
 
 ### Performance
 
