Wrote some more

--- a/references.bib
+++ b/references.bib
@@ -4571,4 +4571,12 @@
 	url = {https://rstudio.github.io/crosstalk/index.html}
 }
 
+@article{bartonicek2024,
+  title={No More, No Less than Sum of Its Parts: Groups, Monoids, and the Algebra of Graphics, Statistics, and Interaction},
+  author={Bartonicek, Adam and Urbanek, Simon and Murrell, Paul},
+  journal={Journal of Computational and Graphical Statistics},
+  pages={1--12},
+  year={2024},
+  publisher={Taylor \& Francis}
+}
 
