--- a/_main.Rmd
+++ b/_main.Rmd
@@ -326,7 +326,7 @@ Thus, while not the only option, I argue that disjointness provides a good defau
 
 The core idea of the model is preservation of the properties of set union. Among these, the two most important ones are associativity, allowing for arbitrary ordering of operations, and unitality, guaranteeing the existence of a neutral element. Together, these two primary properties identify monoids as the fundamental algebraic structure.
 
-This connection between set union and monoids is not novel. For instance, monoids have long been known to have desirable properties for parallel computing [see e.g. @parent2018; @fegaras2017; @lin2013]. More broadly, monoids are also popular functional programming [see e.g. @milewski2018], and form the basis of certain algorithms in generic programming [@stepanov2009; @stepanov2013]. Finally, monoids and other concepts from category theory have also been used in certain areas of relational database theory [see e.g. @fong2018; @gibbons2018]
+This connection between set union and monoids is not novel. For instance, monoids have long been known to have desirable properties for parallel computing [see e.g. @parent2018; @fegaras2017; @lin2013]. More broadly, monoids are also popular functional programming [see e.g. @milewski2018], and form the basis of certain algorithms in generic programming [@stepanov2009; @stepanov2013]. Finally, monoids and other concepts from category theory have also been used in certain areas of relational database theory [see e.g. @fong2019; @gibbons2018]
 
 However, as far as I am aware, I am the first to make the connection between monoids and many popular visualization types. As discussed in Section \@ref(visualization-category-theory), the model described in the present thesis differs significantly from past applications of category theory to data visualization, being on one hand more applied than some applications (it relates to concrete statistics, geometric objects, and interactive features) and more theoretical than others (not a functional programming library). 
 
@@ -340,24 +340,42 @@ However, I believe this is not an issue, since the model is not meant to be pres
 
 ## Limitations of the software
 
-During this project, I had time to think through and test out different implementations of the various features of the interactive data visualization system. While I succeeded in some areas, there were also areas which could still use some improvement. 
+During this project, I had time to think through and test out different implementations of the various features of the interactive data visualization system. While I succeeded in some areas, there were also areas which could still use further improvement. 
 
-### Declarative schemas
+### Scope and features
 
-As discussed in Section \@ref(system), one limitation of the delivered system is the absence of a simple declarative schema-based approach for specifying plots. While declarative schemas, popularized by the Grammar of Graphics [@wilkinson2012], have become a highly popular in modern data visualization libraries, my system deviates from this paradigm. Although certain core components within `plotscape` are modeled declaratively (as shown in Section \@ref(summaries)), the overall plot definitions remain largely procedural, and the user-facing API (`plotscaper`) relies on nominal plot types^[Currently there are six different types of plots implemented.]. 
+Currently, `plotscaper` offers a number of features for creating and manipulating interactive figures, many of which have been discussed either in Section \@ref(system) or in Section \@ref(applied-example). While these features can be used to create a fairly substantial range of useful interactive figures, there are of course many limitations and gaps when compared to other, better-established established data visualization packages. These will be discussed in this section. 
 
-However, as I argued in Section \@ref(variables-encodings), this lack of a full declarative plot specification is not unique to my system. Instead, many currently available declarative data visualization libraries provide incomplete solutions, frequently concealing or obscuring key implementation details [see also @wu2024]. During the project, I did try to come up with a simple and convenient way of specifying declarative schemas for interactive graphics, however, ultimately I failed, and chose to simply make this implementation gap explicit. 
+First, `plotscaper` currently offers six plot types: scatterplots, barplots, histograms, fluctuation diagrams, histograms, two-dimensional histograms, and parallel coordinate plots. Additionally, normalized representations, such as spineplots and spinograms, are available for all aggregate plots. While these six plot types can already be used to create a wide range of useful interactive figures, there are numerous other plots which could be highly desirable in applied data analysis. Density plots, radar plots, mosaic plots, and maps, for example, may be compatible with the `plotscaper` model and could be potential additions in future versions of the package. Finally, all plots are specified in a nominal way, meaning that, for example, to add a scatterplot, we call the `add_scatterplot` function. While a system for specifying plots declaratively would be appealing, implementing such a system has presented challenges, and the issue will be discussed in more depth in Section \@ref(declarative-schemas).
 
-Specifying a complete declarative schema interactive data visualizations is inherently challenging, for several reasons. First, there is the lack of direct correspondence between data variables and visual encodings. Specifically, as discussed in Section \@ref(variables-encodings), often, what we plot *not* variables found in the original data, but instead variables which have been computed or derived in some way. This is exists even in static graphics; however, it is further amplified in interactive graphics, where dynamic remapping of variables to aesthetics is often desirable (such as when transforming a barplot to a spineplot). Thus, directly mapping data variables to aesthetics seems to be an inadequate approach. However, to map derived variables to aesthetics, we have to explicitly specify *what* we compute and *how*. For example, to fully specify a histogram, we have to describe the fact that we want to bin cases based on some continuous variable, compute the counts within bins, stack these counts, also within bins, and finally map the bin borders to the x-axis variable and the counts to the y-axis variable. While I have been able to get reasonably far with providing a mechanism for specifying declarative schema for this process (see Section \@ref(variables-encodings)), ultimately, I was not able to integrate it with the rest of the system without some amount of procedural code.
+Second, as described in Section \@ref(system), `plotscaper` currently uses a simple transient-persistent product model for linked selection. Users can transiently select cases or assign them to permanent groups via click or click-and-drag interactions. The combination of transient and persistent selection results in $2 \times 4 = 8$ possible selection states per case.  This model facilitates simple conditional queries, such as "how many cases assigned to group X are also transiently selected?" For example, users can assign a bar in a barplot to a permanent group and transiently select a point cluster in a scatterplot to easily identify cases belonging to both. However, this model is, of course, fairly limited: it does not allow to combine selections with logical operators such as negation or exclusive difference. Implementing more comprehensive selection operators [see e.g. @urbanek2003; @urbanek2011; @theus2022; @wilhelm2008] would enable more sophisticated analytical workflows.       
+Third, plot and figure customization in `plotscaper` is currently fairly limited. While users can adjust attributes such as the figure layout and plot scales, surface-level graphical attributes like colors, margins, and axis styling are not yet exposed. Although the support for adding these customization options does exist, their implementation was not prioritized. They may be added in future package versions, when the API stabilizes more.
 
-Second, a further challenge to declarative schemas in interactive data visualization stems from the hierarchical nature of graphics (see Section \@ref(hierarchy)). Specifically, while in static graphics, we can often act as if the data underlying our plots is "flat", interactivity necessitates hierarchical data structures. Interactive features like linked selection and parametric manipulation trigger updates to summary statistics, requiring hierarchical organization for efficient updates, especially with features like stacking and normalization (see Sections \@ref(transforming-summaries) and \@ref(aggregation-summaries)). Furthermore, hierarchical data can also be leveraged to provide more efficient scale and axis updates (see Section \@ref(plot-scales)), and display more information during querying (e.g., by displaying summary statistics for both objects and segments). However, specifying declarative schemas with hierarchical data is inherently more complex than with flat data, due to both increased volume (multiple data sets) and hierarchical dependencies.
+### Declarative schemas {#declarative-schemas}
 
-Third and related issue which complicates declarative schemas is reactivity. Interactive visualizations need to, by definition, respond to user input. However, this input can impact various stages of the data visualization pipeline differently. For instance, while shrinking or growing the size of points in a scatterplot is a purely graphical computation, shrinking or growing the width of histogram bins requires recomputation of the underlying data. Consequently, the declarative schema should be able to handle reactive parameters which may have hierarchical dependencies. Signals (see Section \@ref(signals)) may offer a hypothetical general solution; however, as discussed in Section \@ref(reactivity-solution), my experience with developing `plotscape` revealed that reactivity typically tends to enter the visualization process at discrete points, corresponding to the four stages of the data visualization pipeline. While I did not manage to develop a general declarative mechanism for setting these parameters at these four stages, the following list outlines the identified points of reactivity:
+As discussed in Section \@ref(system), one limitation of the delivered system is the absence of a simple declarative schema-based approach for specifying plots. While declarative schemas, popularized by the Grammar of Graphics [GoG, @wilkinson2012], have become a highly popular in modern data visualization libraries [see e.g. @wickham2016; @satyanarayan2016; @plotly2023], my system deviates from this paradigm. Although certain core components within `plotscape` are modeled declaratively (as shown in Section \@ref(summaries)), the overall plot definitions remain largely procedural, and the user-facing API (`plotscaper`) relies on nominal plot types^[Currently there are six different types of plots implemented.]. 
 
-- Pre-partitioning: Data streaming, partitioning parameter updates (e.g. histogram bin width, selection status)
+However, as I argued in Section \@ref(variables-encodings), this lack of a full declarative plot specification is not unique to my system. Instead, I contend that many currently available declarative data visualization libraries provide partial or incomplete solutions, and frequently conceal or obscure key implementation details [see also @wu2024]. For instance, operations such as grouping, binning, stacking, and normalization are often passed implicitly. Put simply, there are gaps in the GoG-based model. To quote @wu2024:
+
+> Despite these broad-ranging benefits, we observe that this [GoG-based] semantic delineation obscures the process of visual mapping in a way that makes it difficult to reason about visualizations and their relationships to user tasks.
+> 
+> We observe that the core reason for this dissonance between visualization specifications and functions is that the Visual Mapping step represents two distinct substeps. The first involves additional transformations over the data tables in order to compute, e.g., desired statistics and spatially place marks that are specific to the visualization design. We term these Design-specific Transformations. The second is the visual encoding that maps each row in the transformed table to a mark and data attributes to mark attributes using simple
+scaling functions.
+
+During the course of my project, I have independently reached several conclusions which similar to those of @wu2024^[I became aware of Eugene Wu's work only after he contacted me concerning the publication of a paper I co-authored during this project's development: @bartonicek2024]. I did try to come up with a way of specifying declarative schemas for interactive graphics, however, despite some partial successes (see Section \@ref(aggregation-summaries)), ultimately, I was not able to come up with a comprehensive model. I chose to make this implementation gap explicit in `plotscaper`. However, I believe I have also been able to identify three key factors which contribute to the difficulty of developing declarative schemas for interactive data visualization, and these are detailed below. 
+
+The first factor which complicates declarative schemas in interactive graphics is the weak correspondence between data variables and visual encodings. Specifically, as discussed in Section \@ref(variables-encodings), often, what we plot are *not* variables found in the original data, but instead variables which have been computed or derived in some way. This is exists even in static graphics; however, it is further amplified in interactive graphics, where dynamic remapping of variables to aesthetics is often desirable (such as when transforming a barplot to a spineplot). Thus, directly mapping data variables to aesthetics seems to be an inadequate approach. However, to map derived variables to aesthetics, we have to explicitly specify *what* we compute and *how*. For example, to fully specify a histogram, we have to describe the fact that we want to bin cases based on some continuous variable, compute the counts within bins, stack these counts, also within bins, and finally map the bin borders to the x-axis variable and the counts to the y-axis variable. While I have been able to get reasonably far with providing a mechanism for specifying declarative schema for this process (see Section \@ref(variables-encodings)), ultimately, I was not able to integrate it with the rest of the system without some amount of procedural code.
+
+The second factor which presents a challenge to declarative schemas in interactive data visualization is the hierarchical nature of graphics itself (see Section \@ref(hierarchy)). Specifically, while in static graphics, we can often act as if the data underlying our plots is "flat", interactivity necessitates hierarchical data structures. Interactive features like linked selection and parametric manipulation trigger updates to summary statistics, requiring hierarchical organization for efficient updates, especially with features like stacking and normalization (see Sections \@ref(transforming-summaries) and \@ref(aggregation-summaries)). Furthermore, hierarchical data can also be leveraged to provide more efficient scale and axis updates (see Section \@ref(plot-scales)), and display more information during querying (e.g., by displaying summary statistics for both objects and segments). However, specifying declarative schemas with hierarchical data is inherently more complex than with flat data, due to both increased surface area (multiple data sets) and hierarchical dependencies. In `plotscape`, these hierarchical dependencies are represented by aggregated variables with references to parent variables (and factors/reducers), which can be leveraged by specialized operators such as `Reduced.stack` and `Reduced.normalize`, see Section \@ref(aggregation-summaries). An alternative, unexplored approach could be to partially "flatten" the hierarchical structure via SQL-like table joins (i.e. adding parent data as new columns with repeated values). However, with multiple levels of partitioning, this approach may become unwieldy^[I.e., the data would have to contain columns such `value`, `parent_value`, `parent_parent_value`, etc...], and there are other considerations, such as the necessity for variables to "remember" how they have been aggregated (see Sections \@ref(aggregation) and \@ref(aggregation-summaries)), and the reactive propagation of updates, which make completely flat data tables inadequate. 
+
+The third and final factor which makes declarative schemas challenging is reactivity. Interactive visualizations need to, by definition, respond to user input. However, this input can impact various stages of the data visualization pipeline differently. For instance, while shrinking or growing the size of points in a scatterplot is a purely graphical computation, shrinking or growing the width of histogram bins requires recomputation of the underlying data. Consequently, the declarative schema should be able to handle reactive parameters which may have hierarchical dependencies. Signals (see Section \@ref(signals)) may offer a hypothetical general solution; however, as discussed in Section \@ref(reactivity-solution), my experience with developing `plotscape` revealed that reactivity typically tends to enter the visualization process at discrete points, corresponding to the four stages of the data visualization pipeline. While I did not manage to develop a general declarative mechanism for this, the following list outlines the identified hypothetical points of reactivity:
+
+- Pre-partitioning: Data streaming, partitioning parameter updates (e.g. histogram bin width, selection)
 - Pre-aggregation: Aggregation parameter updates (e.g. regression line regularization)
 - Pre-scaling: Scale parameter updates (e.g. sorting, size/alpha adjustments)
 - Pre-rendering: Surface-level changes (e.g. layout modifications, DOM resize events)
+
+To summarize, modeling interactive data visualizations declaratively presents significant challenges. Specifically, the weak correspondence between data variables and aesthetics, the inherent hierarchical nature of graphics, and the necessity for reactive updates make the seemingly appealing model of "assign variable $x$ to aesthetic $y$" inadequate for capturing a wide range of popular interactive graphics. These issues are not unique to `plotscaper`
 
 ### Performance
 
